overflow fixed

--- a/src/Components/Workspace/Workspace.css
+++ b/src/Components/Workspace/Workspace.css
@@ -1,3 +1,9 @@
+.workspace {
+    background-color: #0E0E1C;
+    z-index:1;
+    overflow: auto;
+}
+
 .panel {
     border-bottom: 1px solid #6A6A9F;
     padding: 10px;
